--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,7 +34,10 @@ jobs:
         with:
           lfs: true
       - name: Setup Pages
+    # This is where the error happens now
         uses: actions/configure-pages@v5
+        with:
+           enablement: true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
